Added jboss7 docker definition

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,7 @@ jboss5/files/jdk-6u45-linux-x64-rpm.bin
 jboss6/files/splunkforwarder-6.0.2-196940-linux-2.6-x86_64.rpm
 jboss6/files/jdk-6u45-linux-x64-rpm.bin
 jboss6/files/jboss-eap-6.2.0.zip
+jboss7/files/jdk-7u51-linux-x64.rpm
+jboss7/files/jboss-as-7.1.1.Final.zip
+jboss7/files/splunkforwarder-6.0.2-196940-linux-2.6-x86_64.rpm
 splunk/files/splunk-6.0.1-189883-linux-2.6-x86_64.rpm
