Images based on base image, simplified manage.sh script

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ jboss7/files/jdk-7u51-linux-x64.rpm
 jboss7/files/jboss-as-7.1.1.Final.zip
 jboss7/files/splunkforwarder-6.0.2-196940-linux-2.6-x86_64.rpm
 splunk/files/splunk-6.0.1-189883-linux-2.6-x86_64.rpm
+manage.conf
+base/files/splunkforwarder-6.0.2-196940-linux-2.6-x86_64.rpm
+liferay/files/liferay-portal-jboss-6.2-ce-ga2-20140319114139101.zip
